sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var j=i
  var bool=false
  for (i<-1 to getNombreValeurs()-1){
    while (bool & j>0){
      if (plusPetit(i,j)){
      	echange(i,j)
      	j=j-1
      }else{
        bool=false
      }
    } 
  }
}